# ITPT

./: .gitignore  README.md  RELEASE.md  project.toml  pyproject.toml
.github/workflows/: housekeeping.yml  release.yml
dev/_datasets_generation/: add_noise_coco_dataset.py  generate_dataset_V1.R  generate_dataset_V2.R  visualize_annotations.py
dev/_detectron/: eval_detectron2_out.py  export_torchscript.py  infer_clean.py  infer_ts.py  train_detectron2.py
dev/_evaluation/: compare_newick.py
dev/_generate_dataset/: add_random_scales_bottom.py
dev/_heatmap/: eval_dataset.py  infer_heatmap.py  train_dataset.py
dev/_notebooks/: branches_from_nodes.ipynb  label-extraction-easyocr.ipynb  label-extraction-paddleocr.ipynb  label_extraction_doctr.ipynb  label_extraction_easyocr.ipynb  label_extraction_paddleocr.ipynb  newick_from_nodes.ipynb
dev/generator/: __init__.py  generator.py
dev/generators/: __init__.py  generator_from_notebook.py
gui/: main.py
gui_v0/: main.py
gui_v1/: main.py
gui_v1/models/: V1.py
gui_v1/models_modules/: V1.py
gui_v2/: app.py
gui_v2/componnents/: navbar.py
gui_v2/core/: models.py  pipeline.py
gui_v2/pages/: home.py  page2.py  settings.py
gui_v2/widgets/: image_viewer.py
gui_vctk/: README.md  main.py
gui_vctk/componnents/: navbar.py
gui_vctk/core/: newick.py  pipeline.py  settings_state.py
gui_vctk/core/correction/: corrector.py  corrector_leaves.py  corrector_vote.py
gui_vctk/pages/: home.py  page2.py  settings.py
gui_vctk/widgets/: image_viewer.py  log_popup.py
gui_vtk/: README.md  main.py
gui_vtk/models_modules/: V1.py
itpt/: __init__.py
itpt/_data/models/example/: model.py
itpt/_data/models/v0/: model.py
itpt/_data/models/v0/nodesdetection/: infer_ts_cpu.py
itpt/_data/models/v0/postprocess/: corrector.py  corrector_leaves.py  corrector_vote.py  newick.py
itpt/_data/models/v0/preprocess/: cropping.py  denoising.py  labelling.py
itpt/_data/models/v1/: model.py  utils.py
itpt/_data/models/v1/nodesdetection/: infer.py  nodesDetection.py
itpt/_data/models/v1/postprocessing/: newick.py  ocr.py
itpt/_data/models/v1/preprocessing/: cropping.py  denoising.py
itpt/core/: __init__.py  branches.py  model.py  newick.py  utils.py
itpt/models/: __init__.py  registry.py
sandbox/: evaluation.py  example.py  main.py
tools/: build.py  clean.py  generate_models.py  run.py
