[build-system]
requires = ["setuptools", "torch"]
build-backend = "setuptools.build_meta"

[project]
name = "itpt"
version = "0"
description = "A Python library for converting images of phylogenetic trees into the Newick format."
authors = [
    { name = "Barrère Dorian", email = "barreredorian332@gmail.com" },
    { name = "Accini Arthur", email = "acciniarth@cy-tech.fr" },
    { name = "Chamaillard Lucas", email = "lchamaillard.lucas@gmail.com" },
    { name = "Reyne Matteo", email = "reynematte@cy-tech.fr" }
]
requires-python = ">=3.13"
dependencies = []

[tool.setuptools.packages.find]
where = ["."]
include = ["itpt*"]

[tool.setuptools.package-data]
"itpt" = ["_data/"]

[tool.setuptools.exclude-package-data]
"itpt" = ["_data/models/v0/"]

[tool.poetry.scripts]
itpt-build = "tools.build:main"
itpt-clean = "tools.clean:main"
itpt-generate-models = "tools.generate_models:main"
itpt-run = "tools.run:main"

[dependency-groups]
dev = [
    "nbconvert",
    "nbformat",
    "notebook",
    "ipykernel",
    "ipywidgets",
    "tqdm",
    "matplotlib",
    "opencv-python",
    "torch",
    "torchvision",
    "torchaudio",
    "easyocr",
    "paddlepaddle==3.2.2",
    "paddleocr==3.3.3",
    "scikit-learn",
    "numpy",
    "python-doctr"
]
gui = [
    "pyinstaller",
    "pillow"
]

[tool.poetry.group.gui]
optional = true
