[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "itpt"
version = "0"
description = "A Python library for converting images of phylogenetic trees into the Newick format."
authors = [
    { name = "Barrère Dorian", email = "barreredorian332@gmail.com" },
    { name = "Accini Arthur", email = "acciniarth@cy-tech.fr" },
    { name = "Chamaillard Lucas", email = "lchamaillard.lucas@gmail.com" },
    { name = "Reyne Matteo", email = "reynematte@cy-tech.fr" }
]
requires-python = ">=3.13,<3.14"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["."]
include = ["itpt"]

[tool.setuptools.package-data]
"itpt" = ["_data/*"]

[tool.setuptools.exclude-package-data]
"itpt" = [
    "*/__pycache__/*",
    "_data/models/*/weights/*",
    "_data/models/v0/*"
]

[tool.poetry.scripts]
itpt-build = "tools.build:main"
itpt-clean = "tools.clean:main"
itpt-generate-models = "tools.generate_models:main"
itpt-run = "tools.run:main"

[[tool.poetry.source]]
name = "pytorch_cpu"
url = "https://download.pytorch.org/whl/cpu"
priority = "explicit"

[tool.poetry.dependencies]
numpy = "*"
pillow = "*"
opencv-python = "*"
python-doctr = "*"
torch = [
    { version = ">=2.10.0,<3.0.0", markers = "sys_platform == 'darwin'" },
    { version = ">=2.10.0,<3.0.0", markers = "sys_platform != 'darwin'", source = "pytorch_cpu" }
]
torchvision = [
    { version = ">=0.25.0,<0.26.0", markers = "sys_platform == 'darwin'" },
    { version = ">=0.25.0,<0.26.0", markers = "sys_platform != 'darwin'", source = "pytorch_cpu" }
]

[dependency-groups]
dev = [
    "nbconvert",
    "nbformat",
    "notebook",
    "ipykernel",
    "ipywidgets",
    "tqdm",
    "matplotlib",
    "torchaudio",
    "easyocr",
    "paddlepaddle==3.2.2",
    "paddleocr==3.3.3",
    "scikit-learn"
]
gui = [
    "pyinstaller"
]

[tool.poetry.group.gui]
optional = true
